added libtool form of autotools example

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # Init autoconfig, full program name, version, email, program name, url
-AC_INIT([hello], [subdir], [x@example.com], [hello], [http://www.dwheeler.com/])
+AC_INIT([hello], [libtool], [x@example.com], [hello], [http://www.dwheeler.com/])
 # autoconf version should be higher than specified.
 AC_PREREQ([2.68])
 # Safety check: source file, must exist.
@@ -11,12 +11,15 @@ AC_CONFIG_AUX_DIR([build-aux])
 # m4 subdirectory is used, instead of aclocal.m4, in Makefile.am should also
 # add a line: ACLOCAL_AMFLAGS = -I m4 --install
 AC_CONFIG_MACRO_DIR([m4])
+# libtool init
+LT_INIT
 # automake commandline init.
 AM_INIT_AUTOMAKE([1.11 subdir-objects -Wall -Werror])
 # let ./configure generate file named Makefile.
 AC_CONFIG_FILES([Makefile])
 # Automatic find and define C compiler.
 AC_PROG_CC
+AM_PROG_AR
 # Here put various checks.
 ## list-of-libs is space separated list of libs, found by pkg-config
 ## lib name may add version numbers like >=
